Fixed broken mixin in components partial. REmoved display none for alert in form as it was not showing errors for login page. Have to find another way of displaying the error selectively.

--- a/assets/_sass/_components.scss
+++ b/assets/_sass/_components.scss
@@ -1,4 +1,4 @@
-@mixin img-ovebackgroundacity-start, $opacity-end) {
+@mixin img-overlay ($opacity-start, $opacity-end) {
   width: 100%;
   height: 100%;
   content: "";
@@ -26,7 +26,6 @@
 .form__section-title {
   @extend .section-title;
   color: $section-title-color;
-  //margin-top: 5rem;
   margin-bottom: 2rem;
 }
 
@@ -54,8 +53,4 @@
   margin-top: 1rem;
   @include title-font;
   font-size: 1.75rem;
-}
-
-section form .alert {
-  display: none;
 }
